--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-plugin-styled-components": "^3.2.1",
     "gatsby-source-cloudinary": "^0.1.11",
-    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-transformer-json": "^2.4.0",
     "gatsby-transformer-sharp": "^2.4.3",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
