--- a/package.json
+++ b/package.json
@@ -8,18 +8,15 @@
     "babel-plugin-styled-components": "^1.10.7",
     "dotenv": "^8.2.0",
     "gatsby": "^2.20.12",
-    "gatsby-image": "^2.3.1",
     "gatsby-plugin-load-script": "^1.1.0",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sass": "^2.2.3",
-    "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-plugin-styled-components": "^3.2.1",
     "gatsby-source-cloudinary": "^0.1.11",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-json": "^2.4.0",
-    "gatsby-transformer-sharp": "^2.4.3",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -28,6 +25,10 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
+    "gatsby-image": "^2.4.0",
+    "gatsby-plugin-sharp": "^2.6.0",
+    "gatsby-source-datocms": "^2.2.1",
+    "gatsby-transformer-sharp": "^2.5.0",
     "lodash": "^4.17.15",
     "prettier": "^1.19.1",
     "react-masonry-css": "^1.0.14"
