--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-transformer-sharp": "^2.5.0",
     "lodash": "^4.17.15",
     "prettier": "^1.19.1",
+    "react-headroom": "^3.0.0",
     "react-masonry-css": "^1.0.14"
   },
   "keywords": [
