--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.0.7",
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-sharp": "^2.6.0",
     "gatsby-source-datocms": "^2.2.1",
