--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "4000": "gatsby develop -p 4000",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
