--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "simple-parallax-js": "^5.6.2",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
